# AIC-2025-intelligent-robot-grasping

./: .gitignore  README.md  REDME.md  chat_interactive.py  llama_readme.txt
inuros2_sdkinstall/: inuInstall.txt
inuros2_sdkinstall/sdkinstall-main/: README.md  inuInstall.sh  inuInstall使用说明 V0.1.md  inuInstall使用说明V0.2.md
inuros2_sdkinstall/sdkinstall-main/multicamera/: inuservice@.service  inuservicemulti.sh
jaka_sdk_py/: install.sh  sdk_test.py
src/bringup/: CMakeLists.txt  package.xml
src/bringup/config/: test_model.py  yolov5nblockconfig - 副本.json  yolov8nblockconfig.json
src/bringup/launch/: cam_web.launch.py  chat_bridge.launch.py  dnn_node_start.launch.py  jaka_start.launch.py  langgraph_agent.launch.py  servoj_demo.launch.py  tf_pub.launch.py
src/custom_msgs/: CMakeLists.txt  package.xml
src/custom_msgs/msg/: Blocks.msg
src/custom_msgs/srv/: RestartDetection.srv  StrMsg.srv
src/inuros2/: CMakeLists.txt  package.xml  run.sh
src/inuros2/config/: params.yaml  params1.yaml  params2.yaml
src/inuros2/include/: NotImplementedException.h  Version.h  config.h  inuros2_node_factory.h  ros_depth_publisher.h  ros_disparity_publisher.h  ros_features_publisher.h  ros_fisheye_publisher.h  ros_hole_filter.h  ros_imu_publisher.h  ros_median_filter.h  ros_objectdetection_publisher.h  ros_pointcloud_publisher.h  ros_publisher.h  ros_publisher_bookkeeping.h  ros_sensor.h  ros_slam_publisher.h  ros_temporal_filter.h  ros_video_publisher.h  ros_video_publishers_base.h  ros_webcam_publisher.h
src/inuros2/launch/: Inuros2.component.py  Inuros2.launch.py  Inuros2.launch_multi.py  Inuros2.service1.py  Inuros2.service2.py
src/inuros2/msg/: Features.msg
src/inuros2/src/: inuros2_node_factory.cpp  ros_depth_publisher.cpp  ros_disparity_publisher.cpp  ros_features_publisher.cpp  ros_fisheye_publisher.cpp  ros_imu_publisher.cpp  ros_objectdetection_publisher.cpp  ros_pointcloud_publisher.cpp  ros_publisher.cpp  ros_publisher_bookkeeping.cpp  ros_sensor.cpp  ros_slam_publisher.cpp  ros_video_publisher.cpp  ros_video_publishers_base.cpp  ros_webcam_publisher.cpp
src/inuros2/src/filter/: depth2pc.cpp  depth2pc.h  pc_filter.cpp  pc_filter.h  space_filter.cpp  space_filter.h  temporal_filter.cpp  temporal_filter.h
src/jaka_ros2-main/: README.md  launches.py  release_notes.md
src/jaka_ros2-main/src/jaka_description/: CMakeLists.txt
src/jaka_ros2-main/src/jaka_description/launch/: jaka_minicobo_rviz_control_launch.py  jaka_pro16_rviz_control_launch.py  jaka_pro7_rviz_control_launch.py  jaka_zu12_rviz_control_launch.py  jaka_zu18_rviz_control_launch.py  jaka_zu3_rviz_control_launch.py  jaka_zu5_rviz_control_launch.py  jaka_zu7_rviz_control_launch.py  test_launch.py
src/jaka_ros2-main/src/jaka_description/meshes/jaka_c12_meshes/: Link_01.STL  Link_02.STL  Link_03.STL  Link_04.STL  Link_05.STL  Link_06.STL  base_link.STL
src/jaka_ros2-main/src/jaka_description/meshes/jaka_c5_meshes/: Link_02.STL  Link_03.STL  Link_04.STL  Link_05.STL  Link_06.STL
src/jaka_ros2-main/src/jaka_description/meshes/jaka_c7_meshes/: Link_02.STL  Link_03.STL  Link_04.STL  Link_05.STL  Link_06.STL
src/jaka_ros2-main/src/jaka_description/meshes/jaka_pro12_meshes/: Link_04.STL  Link_05.STL  Link_06.STL
src/jaka_ros2-main/src/jaka_description/meshes/jaka_pro18_meshes/: Link_01.STL  Link_02.STL  Link_03.STL  Link_04.STL  Link_05.STL  Link_06.STL  base_link.STL
src/jaka_ros2-main/src/jaka_description/meshes/jaka_pro5_meshes/: Link_00.STL  Link_03.STL  Link_04.STL  Link_05.STL  Link_06.STL
src/jaka_ros2-main/src/jaka_description/urdf/: jaka_a12.urdf  jaka_a5.urdf  jaka_c12.urdf  jaka_c5.urdf  jaka_c7.urdf  jaka_minicobo.urdf  jaka_pro12.urdf  jaka_pro16.urdf  jaka_pro18.urdf  jaka_pro5.urdf  jaka_pro7.urdf  jaka_s12.urdf  jaka_s5.urdf  jaka_s7.urdf  jaka_zu12.urdf  jaka_zu18.urdf  jaka_zu20.urdf  jaka_zu3.urdf  jaka_zu5.urdf  jaka_zu7.urdf
src/jaka_ros2-main/src/jaka_driver/src/: servoj_demo.cpp
src/jaka_ros2-main/src/jaka_minicobo_moveit_config/: .setup_assistant  CMakeLists.txt  package.xml
src/jaka_ros2-main/src/jaka_minicobo_moveit_config/config/: initial_positions.yaml  jaka_minicobo.ros2_control.xacro  jaka_minicobo.srdf  jaka_minicobo.urdf.xacro  joint_limits.yaml  moveit_controllers.yaml  ros2_controllers.yaml
src/jaka_ros2-main/src/jaka_minicobo_moveit_config/launch/: demo.launch.py  demo_gazebo.launch.py  gazebo.launch.py  move_group.launch.py  moveit_rviz.launch.py  rsp.launch.py  setup_assistant.launch.py  spawn_controllers.launch.py  static_virtual_joint_tfs.launch.py  warehouse_db.launch.py
src/jaka_ros2-main/src/jaka_msgs/: CMakeLists.txt
src/jaka_ros2-main/src/jaka_planner/: CMakeLists.txt  package.xml
src/jaka_ros2-main/src/jaka_planner/launch/: moveit_server.launch.py
src/jaka_ros2-main/src/jaka_planner/src/: moveit_server.cpp  moveit_test.cpp
src/test_jaka_planner/: CMakeLists.txt  package.xml
src/test_jaka_planner/launch/: moveit_server.launch.py
src/test_jaka_planner/src/: jaka_setio.cpp  moveit_test2.cpp  moveit_test2.md  moveit_test3.cpp  moveit_test4.cpp
src/tools_demo/: package.xml  setup.py  test_agent.py
src/tools_demo/test/: num.py
src/tools_demo/tools_demo/: chat_interactive.py  connecter.py  pose_get copy.py  pose_get.py  test.py
src/tools_demo/tools_demo/modules/: jaka.py  jaka_handeye_result_2025_06_27_21_04_05.txt  tools.py
src/tools_demo/tools_demo/modules/agent/: __init__.py  agent_node.py  graph.py  nodes.py  state.py
